GPII-364: Added the "inverted" contrast theme. Rearranged the themes' order.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -647,12 +647,25 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
     background-color: black;
 }
 
+.gpii-prefsEditor-theme-inverted {
+    color: #e9e9e9;
+    background-color: #393536;
+}
+
 .fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-default,
 .fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-default span,
 .fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-default .fl-crossout {
     background-color: #e9e9e9 !important;
     border-color: #393536 !important;
     color: #393536 !important;
+}
+
+.fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-inverted,
+.fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-inverted span,
+.fl-prefsEditor .fl-choice label.fl-theme-prefsEditor-inverted .fl-crossout {
+    background-color: #393536 !important;
+    border-color: #e9e9e9 !important;
+    color: #e9e9e9 !important;
 }
 
 .gpii-prefsEditor-theme-default {
@@ -680,6 +693,11 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
     color: black !important;
 }
 
+.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-headerImage {
+    background-color: #e9e9e9 !important;
+    color: #393536 !important;
+}
+
 .gpii-prefsEditor-theme-yb .gpii-prefsEditor-headerTitle {
     color: black !important;
 }
@@ -696,17 +714,23 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
     color: black !important;
 }
 
+.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-headerTitle {
+    color: #393536 !important;
+}
+
 .gpii-prefsEditor-theme-yb .gpii-prefsEditor-headerClickableLabel,
 .gpii-prefsEditor-theme-bw .gpii-prefsEditor-headerClickableLabel,
 .gpii-prefsEditor-theme-by .gpii-prefsEditor-headerClickableLabel,
-.gpii-prefsEditor-theme-wb .gpii-prefsEditor-headerClickableLabel {
+.gpii-prefsEditor-theme-wb .gpii-prefsEditor-headerClickableLabel,
+.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-headerClickableLabel {
     background-color: transparent !important;
 }
 
 .gpii-prefsEditor-theme-yb .gpii-prefsEditor-addToMyPreferencesLabel,
 .gpii-prefsEditor-theme-bw .gpii-prefsEditor-addToMyPreferencesLabel,
 .gpii-prefsEditor-theme-by .gpii-prefsEditor-addToMyPreferencesLabel,
-.gpii-prefsEditor-theme-wb .gpii-prefsEditor-addToMyPreferencesLabel {
+.gpii-prefsEditor-theme-wb .gpii-prefsEditor-addToMyPreferencesLabel,
+.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-addToMyPreferencesLabel {
     background-color: transparent !important;
 }
 
@@ -730,6 +754,11 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
     color: black !important;
 }
 
+.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-addToMyPreferencesStar {
+    background-color: #e9e9e9 !important;
+    color: #393536 !important;
+}
+
 .gpii-prefsEditor-theme-yb input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
     background-color: black !important;
     color: yellow !important;
@@ -748,6 +777,11 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
 .gpii-prefsEditor-theme-wb input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
     background-color: black !important;
     color: white !important;
+}
+
+.gpii-prefsEditor-theme-inverted input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
+    background-color: #393536 !important;
+    color: #e9e9e9 !important;
 }
 
 .gpii-prefsEditor-theme-yb [title]:after{
@@ -770,24 +804,32 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
     border: 1px solid white !important;
 }
 
+.gpii-prefsEditor-theme-inverted [title]:after{
+    background-color: #e9e9e9 !important;
+    border: 1px solid #393536 !important;
+}
+
 .gpii-prefsEditor-theme-yb .gpii-increaseSize-magnifierPositionBackground,
 .gpii-prefsEditor-theme-bw .gpii-increaseSize-magnifierPositionBackground,
 .gpii-prefsEditor-theme-by .gpii-increaseSize-magnifierPositionBackground,
-.gpii-prefsEditor-theme-wb .gpii-increaseSize-magnifierPositionBackground {
+.gpii-prefsEditor-theme-wb .gpii-increaseSize-magnifierPositionBackground,
+.gpii-prefsEditor-theme-inverted .gpii-increaseSize-magnifierPositionBackground {
     background-color: transparent !important;
 }
 
 .gpii-prefsEditor-theme-yb .gpii-prefsEditor-indicator,
 .gpii-prefsEditor-theme-bw .gpii-prefsEditor-indicator,
 .gpii-prefsEditor-theme-by .gpii-prefsEditor-indicator,
-.gpii-prefsEditor-theme-wb .gpii-prefsEditor-indicator {
+.gpii-prefsEditor-theme-wb .gpii-prefsEditor-indicator,
+.gpii-prefsEditor-theme-inverted .gpii-prefsEditor-indicator {
     background-color: transparent !important;
 }
 
 .gpii-prefsEditor-theme-yb .gpii-increaseSize-plusMinusNumericalWidget,
 .gpii-prefsEditor-theme-bw .gpii-increaseSize-plusMinusNumericalWidget,
 .gpii-prefsEditor-theme-by .gpii-increaseSize-plusMinusNumericalWidget,
-.gpii-prefsEditor-theme-wb .gpii-increaseSize-plusMinusNumericalWidget {
+.gpii-prefsEditor-theme-wb .gpii-increaseSize-plusMinusNumericalWidget,
+.gpii-prefsEditor-theme-inverted .gpii-increaseSize-plusMinusNumericalWidget {
     width: calc(100% - 2px) !important;
     border: 1px solid !important;
 }
@@ -795,21 +837,24 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
 .gpii-prefsEditor-theme-yb .gpii-increaseSize-plusMinusNumericalValue,
 .gpii-prefsEditor-theme-bw .gpii-increaseSize-plusMinusNumericalValue,
 .gpii-prefsEditor-theme-by .gpii-increaseSize-plusMinusNumericalValue,
-.gpii-prefsEditor-theme-wb .gpii-increaseSize-plusMinusNumericalValue {
+.gpii-prefsEditor-theme-wb .gpii-increaseSize-plusMinusNumericalValue,
+.gpii-prefsEditor-theme-inverted .gpii-increaseSize-plusMinusNumericalValue {
     margin-bottom: 1px !important;
 }
 
 .gpii-prefsEditor-theme-yb .gpii-increaseSize-plusMinusNumericalMinReached,
 .gpii-prefsEditor-theme-bw .gpii-increaseSize-plusMinusNumericalMinReached,
 .gpii-prefsEditor-theme-by .gpii-increaseSize-plusMinusNumericalMinReached,
-.gpii-prefsEditor-theme-wb .gpii-increaseSize-plusMinusNumericalMinReached {
+.gpii-prefsEditor-theme-wb .gpii-increaseSize-plusMinusNumericalMinReached,
+.gpii-prefsEditor-theme-inverted .gpii-increaseSize-plusMinusNumericalMinReached {
     color: gray !important;
 }
 
 .gpii-prefsEditor-theme-yb .gpii-prefsEditor input:focus + label, .gpii-prefsEditor-theme-yb .gpii-prefsEditor .gpii-prefsEditor-choice input:focus ~ label,
 .gpii-prefsEditor-theme-bw .gpii-prefsEditor input:focus + label, .gpii-prefsEditor-theme-bw .gpii-prefsEditor .gpii-prefsEditor-choice input:focus ~ label,
 .gpii-prefsEditor-theme-by .gpii-prefsEditor input:focus + label, .gpii-prefsEditor-theme-by .gpii-prefsEditor .gpii-prefsEditor-choice input:focus ~ label,
-.gpii-prefsEditor-theme-wb .gpii-prefsEditor input:focus + label, .gpii-prefsEditor-theme-wb .gpii-prefsEditor .gpii-prefsEditor-choice input:focus ~ label {
+.gpii-prefsEditor-theme-wb .gpii-prefsEditor input:focus + label, .gpii-prefsEditor-theme-wb .gpii-prefsEditor .gpii-prefsEditor-choice input:focus ~ label,
+.gpii-prefsEditor-theme-inverted .gpii-prefsEditor input:focus + label, .gpii-prefsEditor-theme-inverted .gpii-prefsEditor .gpii-prefsEditor-choice input:focus ~ label {
     outline: none !important;
 }
 
@@ -829,10 +874,15 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
     outline: 2px solid white !important;
 }
 
+.gpii-prefsEditor-theme-inverted .gpii-increaseSize-plusMinusNumericalValue:focus, .gpii-prefsEditor-theme-inverted .gpii-increaseSize-plusMinusNumericalValue *:focus, .gpii-prefsEditor-theme-inverted.gpii-increaseSize-plusMinusNumericalValue *:focus, .gpii-prefsEditor-theme-inverted .selectable {
+    outline: 2px solid #e9e9e9 !important;
+}
+
 .gpii-prefsEditor-theme-yb .gpii-increaseSize-magnifierFollowsIcon,
 .gpii-prefsEditor-theme-bw .gpii-increaseSize-magnifierFollowsIcon,
 .gpii-prefsEditor-theme-by .gpii-increaseSize-magnifierFollowsIcon,
-.gpii-prefsEditor-theme-wb .gpii-increaseSize-magnifierFollowsIcon {
+.gpii-prefsEditor-theme-wb .gpii-increaseSize-magnifierFollowsIcon,
+.gpii-prefsEditor-theme-inverted .gpii-increaseSize-magnifierFollowsIcon {
     border: 1px solid;
 }
 
