GPII-271: Working versions of PCP & PMT. TODO: code refactoring.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -28,12 +28,9 @@
          url('../fonts/arrows.eot');
 }
 
-.bold-font-weight {
-    font-weight: bold;
-}
-
-.normal-font-weight {
-    font-weight: normal;
+.gpii-moreLess {
+    margin-left: 85px;
+    padding-top: 10px;
 }
 
 .moreOptionsIcon {
