GPII-271: Code refactoring. Both PCP & PMT now share common prefsEditor, difference too insignificant. CompositePanel files for volume & language moved to the shared directory, since they're identical.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -33,6 +33,10 @@
     padding-top: 10px;
 }
 
+.gpii-moreLess-label {
+    cursor: pointer;
+}
+
 .moreOptionsIcon {
     font-family: 'moreLessArrows'
 }
@@ -425,7 +429,7 @@ body {
     font-family: 'Roboto Slab', serif;
 }
 
-.ui-widget-content.ui-widget::selection { 
+.ui-widget-content.ui-widget::selection {
     background: yellow; /*Safari*/
 }
 
