GPII-271: The moreLess part of visualAlternatives renamed to visualAlternativesMoreLess, so that no confusion occurs after merging other moreLess togglers from other groups.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -23,29 +23,29 @@
 }
 
 @font-face {
-    font-family: 'moreLessArrows';
+    font-family: 'visualAlternativesMoreLessArrows';
     src: url('../fonts/arrows.ttf') format('truetype'),
          url('../fonts/arrows.eot');
 }
 
-.gpii-moreLess {
+.gpii-visualAlternativesMoreLess {
     margin-left: 85px;
     padding-top: 10px;
 }
 
-.gpii-moreLess-label {
+.gpii-visualAlternativesMoreLess-label {
     cursor: pointer;
 }
 
-.moreOptionsIcon {
-    font-family: 'moreLessArrows'
+.visualAlternativesMoreLessIcon {
+    font-family: 'visualAlternativesMoreLessArrows'
 }
 
-.gpii-moreOptionsIcon-more:before {
+.gpii-visualAlternativesMoreLessIcon-more:before {
     content: "\e601";
 }
 
-.gpii-moreOptionsIcon-less:before {
+.gpii-visualAlternativesMoreLessIcon-less:before {
     content: "\e600";
 }
 
