--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -73,7 +73,7 @@ h2 {
 }
 
 h2 > label {
-    word-wrap: break-word;    
+    //word-wrap: break-word;    
 }
 
 /*
@@ -82,10 +82,11 @@ h2 > label {
 .gpii-prefsEditor-headerImage {
     -webkit-font-smoothing: antialiased;
     width: 100%;
-    height: 90px;
+    //height: 90px;
     margin: 0px !important;
     color: white;
-    background-color: #566374;    
+    background-color: #566374;
+    display: table;    
 }
 
 .gpii-prefsEditor-headerImage:before {
@@ -125,26 +126,28 @@ input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor
 
 .gpii-prefsEditor-headerTitle {
     font-family: 'Roboto Slab', serif;
-    left: 0; 
-    width: calc(100% - 90px) !important;
+    //left: 0; 
+    //width: calc(100% - 90px) !important;
     color: white;
-    text-align: left;
+    //text-align: left;
     font-size: 1.8em !important;
-    margin: -90px 0 0;
-    display: inline;
-    line-height: 90px;
+    //margin: -90px 0 0;
+    display: table-cell;
+    //line-height: 90px;
     color: #FFFFFF;
-    float: left;
-    min-height: 90px;
-    width: 240px;
-    word-wrap: break-word;
-    padding-left: 90px;
+    float: none;
+    vertical-align: middle;
+    //float: left;
+	//min-height: 90px;
+    //width: 240px;
+    //word-wrap: break-word;
+    //padding-left: 90px;
 }
 
 .gpii-prefsEditor-headerClickableLabel {
     margin: 0 !important;
-    position: relative !important;
-    top: -90px;
+    //position: relative !important;
+    //top: -90px;
 }
 
 input[type=checkbox], input[type=radio] {
