GPII-364, GPII-365: Minor styling change for onOffSwitchAdjuster.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1071,8 +1071,8 @@ input:checked + label > span > span > .gpii-iconCheckAdjusterCheckIcon:before {
     Style for onOffSwitch adjuster
 */
 .gpii-onOffSwitch-container {
-    display: inline-block;
-    width: 100%;
+    //display: inline-block;
+    //width: 100%;
     padding-bottom: 30px;
 }
 
