NOJIRA: PMT frame width is set with flex.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -17,7 +17,7 @@ body {
 .gpii-prefsEditor-pmtContainer {
 	//display: inline-block;
 	height: 100%;
-    width: 28em;
+    //width: 28em;
 }
 
 .gpii-prefsEditor-frameIcon {
