--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -451,7 +451,7 @@ input[type=checkbox], input[type=radio] {
 */
 .gpii-prefsEditor-previewPerSettingFrame {
     width: 100% !important;
-    margin-top: -1em;
+    margin-top: calc(-1.7em + 1px);
 }
 
 .gpii-prefsEditor-previewPerSettingFrame-small {
@@ -471,7 +471,7 @@ input[type=checkbox], input[type=radio] {
     width:100%;
     background-color: white;
     border: 1px solid #beced1;
-    color: #B8C9CC;
+    //color: #B8C9CC;
     font-size: 1.5em;
     margin-bottom: 0.5em;
 }
@@ -484,12 +484,15 @@ input[type=checkbox], input[type=radio] {
 }
 
 .gpii-prefsEditor-previewPerSettingEyeBackground {
+	border-right: 1.7em solid rgba(0, 0, 0, 0) !important;
+    border-top: 1.7em solid !important;
+    color: #B8C9CC;
     position: relative;
-    background-color: #000000;
-    height: 1em;
+    //background-color: #000000;
+    height: 0;
     //margin-left: 0.1em;
     //margin-top: 0.1em;
-    width: 1em;
+    width: 0;
     z-index: 1;
 }
 
