GPII-364, GPII-365: Minor tweak on iconCheck size.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -967,10 +967,10 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
     border: 1px solid #636C7C;
     border-radius: 4px 4px 4px 4px;
     color: #FFFFFF;
-    font-size: calc(0.8em + 2px);
+    font-size: 1em;
     height: 1em;
     position: relative;
-    width: calc(1em + 2px);
+    width: calc(1em + 1px);
 }
 
 input:checked + label > .gpii-iconCheckAdjusterCheckIcon,
