--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -197,7 +197,7 @@ input[type=checkbox], input[type=radio] {
 }
 .gpii-increaseSize-iconBigCursor {
 	//float: right;
-    width: 1em;
+    width: 0;
     margin-top: -1em;
 }
 
